components/gameComponent.css
/*
. means class
# means id
A B means B within A (any generation)
A>B means B as direct child of A
*/

/*
z-index reference
601/600 - Settings
500 - Vengeance/Minigame modals
401/400 - History
*/

/* basic "hide it" class */
z-game .hiddenPart {
    display: none;
}

/* need to make the game field fill the viewport */
z-game .gameField {
    position: relative;
    height: 100vh;
}

/* first-load modal */
z-game .welcomeModal {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 75%;
    height: 75%;
    background-color: white;
    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
    border-radius: 8px;
    padding: 20px;
    box-sizing: border-box;
    flex-direction: column;
    justify-content: space-between;
}
z-game .welcomeTitle {
    font-size: 24px;
    font-weight: bold;
    text-align: center;
    margin: 20px;
}
z-game .welcomeDescription {
    font-size: 16px;
    text-align: center;
    margin: 20px auto;
}
z-game .welcomeColumns {
    display: flex;
    justify-content: space-between;
    flex-grow: 1;
}
z-game .welcomeDetail {
    width: 48%;
    display: flex;
    flex-direction: column;
    align-items: center;
}
z-game .welcomeButton {
    margin: 10px;
    padding: 10px 20px;
    font-size: 16px;
    cursor: pointer;
}
z-game ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
    width: 100%;
}
z-game li {
    margin-bottom: 10px;
    text-align: center;
}

/* minigame modal */
z-game .minigameModal {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 75%;
    height: 75%;
    background-color: white;
    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
    border-radius: 8px;
    padding: 20px;
    box-sizing: border-box;
    flex-direction: column;
    justify-content: space-between;
}
z-game .minigameContent {
    font-size: 16px;
    text-align: center;
    margin: 20px auto;
}
z-game .minigameCloseButton {
    margin: 10px;
    padding: 10px 20px;
    font-size: 16px;
    cursor: pointer;
}

/* vengeance modal */
z-game .vengeanceModal {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 75%;
    height: 75%;
    background-color: white;
    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
    border-radius: 8px;
    padding: 20px;
    box-sizing: border-box;
    flex-direction: column;
    justify-content: space-between;
}
z-game .vengeanceContent {
    font-size: 16px;
    text-align: center;
    margin: 20px auto;
}
z-game .vengeanceCloseButton {
    margin: 10px;
    padding: 10px 20px;
    font-size: 16px;
    cursor: pointer;
}

/* game buttons section */
z-game .controlContainer {
    position: fixed;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);
    width: 80%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;

}
z-game .controlButton {
    margin: 10px;
    padding: 10px 20px;
    font-size: 16px;
    cursor: pointer;
}


/* styles for the drawer effect */

z-game .drawerContainer {
    position: relative;
}

z-game .drawerToggle {
    position: absolute;
    right: 10px;
    transition: bottom 1s ease-in-out;
    z-index: 401; /* above the drawer */
}

z-game .drawerContents {
    position: fixed;
    left: 50%;
    transform: translateX(-50%);
    bottom: -400px; /* off-screen to the bottom, may need to adjust */
    height: 400px; /* drawerHeight (also, how far up it has to move */
    width: 98%;
    background-color: lightgray;
    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
    transition: bottom 1s ease-in-out; /* smooth motion, may need to adjust timing */
    z-index: 400; /* below the button, above other stuff */
    overflow-x: auto;
}

z-game .drawerContents.openDrawer {
    bottom: 0; /* should cause it to slide in */
}

z-game .drawerClosed::before {
    content: "History ⮝"; /* Unicode Closed Book  - default for help icons */
    font-size: 24px;
}

z-game .drawerOpen::before {
    content: "History ⮟"; /* Unicode Open Book  - toggled state for help icons */
    font-size: 24px;
}

z-game .drawerClosed {
        bottom: 10px;
}

z-game .drawerOpen {
        bottom: 410px;
}

